# py-htmx

./: data.db  db.py  main.py  pyproject.toml  pyrightconfig.json  todo_table.html
database/: factory.py
go-htmx/: index.html  main.go
lib/: fragments.py  imps.py  types.py
lib/html/: home.py  index.html
scripts/: client.sh
test/: renderer.py
web/dynamic/: htmpy.py  test.py  todos.py  utils.py
web/pages/: home.html  jinja_home.html  test.html
web/pages/components/: counter.html  table-rows.html
web/static/: dist.css  globals.css  script.js
